# Resolve

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: scoring.toml  skills.toml
data/examples/: candidates.json
data/scans/: 2026-07-21-manual-scan.json
docs/: OPERATING_PLAYBOOK.md  PLATFORM_STATUS.md  PROFILE_ASSETS.md  SYMMETRY_ROOT_INTEGRATION.md
resolve_scout/: __init__.py  cli.py  collector.py  config.py  models.py  reporting.py  scoring.py
resolve_scout/sources/: __init__.py  github.py
tests/: test_cli.py  test_reward_parser.py  test_scoring.py
